altera o layout do terço para centralizar na pagina

--- a/pages/style.css
+++ b/pages/style.css
@@ -4,10 +4,21 @@
     box-sizing: border-box;
 }
 
-body {
+body{
+    height: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section {
+    /* display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center; */
+    width: 100%;
+    max-width: 600px;
+    border: 1px solid red;
 }
 
 ul,
